Convert String IDs to UUIDs