@@ -34,6 +34,7 @@ import java.net.URISyntaxException;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -41,13 +42,14 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 public class ActionEventQueueTest {
 
-    private final static ObjectMapper OBJECT_MAPPER = new ObjectMapper().registerModule(new JavaTimeModule());
+    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().registerModule(new JavaTimeModule());
 
-    private final static String QUEUE_NAME = "queueName";
-    private final static String DGS_QUEUE_NAME = "dgs-" + QUEUE_NAME;
-    private final static String GOOD_BASIC = """
+    private static final String QUEUE_NAME = "queueName";
+    private static final String DGS_QUEUE_NAME = "dgs-" + QUEUE_NAME;
+    private static final UUID DID = UUID.randomUUID();
+    private static final String GOOD_BASIC = """
             {
-              "did": "did",
+              "did": "%s",
               "actionName": "flowName.ActionName",
               "start": "2021-07-11T13:44:22.183Z",
               "stop": "2021-07-11T13:44:22.184Z",
@@ -61,10 +63,10 @@ public class ActionEventQueueTest {
                 }
               ]
             }
-            """;
-    private final static String GOOD_UNICODE = """
+            """.formatted(DID.toString());
+    private static final String GOOD_UNICODE = """
             {
-                "did": "did",
+                "did": "%s",
                 "actionName": "āȂ.̃Є",
                 "start": "2021-07-11T13:44:22.183Z",
                 "stop": "2021-07-11T13:44:22.184Z",
@@ -76,10 +78,10 @@ public class ActionEventQueueTest {
                     }
                 }]
             }
-            """;
-    private final static String EXTRA_FIELDS_IGNORED = """
+            """.formatted(DID.toString());
+    private static final String EXTRA_FIELDS_IGNORED = """
             {
-                "did": "did",
+                "did": "%s",
                 "extra": "field",
                 "actionName": "sampleTransform.SampleTransformAction",
                 "start": "2021-07-11T13:44:22.183Z",
@@ -92,10 +94,10 @@ public class ActionEventQueueTest {
                     }
                 }
             }
-            """;
-    private final static String ILLEGAL_CONTROL_CHARS = """
+            """.formatted(DID.toString());
+    private static final String ILLEGAL_CONTROL_CHARS = """
             {
-                "did": "did",
+                "did": "%s",
                 "actionName": "\u0000\u0001醑Ȃ",
                 "start": "2021-07-11T13:44:22.183Z",
                 "stop": "2021-07-11T13:44:22.184Z",
@@ -107,10 +109,10 @@ public class ActionEventQueueTest {
                     }
                 }
             }
-            """;
-    private final static String INVALID_DATE = """
+            """.formatted(DID.toString());
+    private static final String INVALID_DATE = """
             {
-                "did": "did",
+                "did": "%s",
                 "actionName": "sampleTransform.SampleTransformAction",
                 "start": "NOTADATETIME",
                 "stop": "2021-07-11T13:44:22.184Z",
@@ -122,10 +124,10 @@ public class ActionEventQueueTest {
                     }
                 }
             }
-            """;
-    private final static String METRICS_OVERFLOW = """
+            """.formatted(DID.toString());
+    private static final String METRICS_OVERFLOW = """
             {
-                "did": "did",
+                "did": "%s",
                 "actionName": "sampleTransform.SampleTransformAction",
                 "start": "2021-07-11T13:44:22.183Z",
                 "stop": "2021-07-11T13:44:22.184Z",
@@ -142,7 +144,7 @@ public class ActionEventQueueTest {
                     }
                 }
             }
-            """;
+            """.formatted(DID.toString());
 
     @Test
     public void testConvertBasic() throws JsonProcessingException, URISyntaxException {
@@ -154,7 +156,7 @@ public class ActionEventQueueTest {
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             assertEquals(1, mock.constructed().size());
             ActionEvent actionEvent = actionEventQueue.takeResult(QUEUE_NAME);
-            assertEquals("did", actionEvent.getDid());
+            assertEquals(DID, actionEvent.getDid());
         }
     }
 
@@ -182,7 +184,7 @@ public class ActionEventQueueTest {
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             assertEquals(1, mock.constructed().size());
             ActionEvent actionEvent = actionEventQueue.takeResult(QUEUE_NAME);
-            assertEquals("did", actionEvent.getDid());
+            assertEquals(DID, actionEvent.getDid());
         }
     }
 
@@ -193,7 +195,7 @@ public class ActionEventQueueTest {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             assertEquals(1, mock.constructed().size());
-            JedisKeyedBlockingQueue mockJedis = mock.constructed().get(0);
+            JedisKeyedBlockingQueue mockJedis = mock.constructed().getFirst();
             when(mockJedis.take(DGS_QUEUE_NAME))
                     .thenReturn(getActionEventsArray());
             org.assertj.core.api.Assertions.assertThatThrownBy(
@@ -210,7 +212,7 @@ public class ActionEventQueueTest {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             assertEquals(1, mock.constructed().size());
-            JedisKeyedBlockingQueue mockJedis = mock.constructed().get(0);
+            JedisKeyedBlockingQueue mockJedis = mock.constructed().getFirst();
             when(mockJedis.take(DGS_QUEUE_NAME))
                     .thenReturn(INVALID_DATE);
             org.assertj.core.api.Assertions.assertThatThrownBy(
@@ -227,7 +229,7 @@ public class ActionEventQueueTest {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             assertEquals(1, mock.constructed().size());
-            JedisKeyedBlockingQueue mockJedis = mock.constructed().get(0);
+            JedisKeyedBlockingQueue mockJedis = mock.constructed().getFirst();
             when(mockJedis.take(DGS_QUEUE_NAME))
                     .thenReturn(ILLEGAL_CONTROL_CHARS);
             org.assertj.core.api.Assertions.assertThatThrownBy(
@@ -244,7 +246,7 @@ public class ActionEventQueueTest {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             assertEquals(1, mock.constructed().size());
-            JedisKeyedBlockingQueue mockJedis = mock.constructed().get(0);
+            JedisKeyedBlockingQueue mockJedis = mock.constructed().getFirst();
             when(mockJedis.take(DGS_QUEUE_NAME))
                     .thenReturn(METRICS_OVERFLOW);
 
@@ -262,22 +264,22 @@ public class ActionEventQueueTest {
     @Test
     @SneakyThrows
     public void testRecordLongRunningTask() {
-        ActionExecution actionExecution = new ActionExecution("TestClass", "testAction", "testDid", OffsetDateTime.now());
+        ActionExecution actionExecution = new ActionExecution("TestClass", "testAction", DID, OffsetDateTime.now());
         try (MockedConstruction<JedisKeyedBlockingQueue> mock = Mockito.mockConstruction(JedisKeyedBlockingQueue.class)) {
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             actionEventQueue.recordLongRunningTask(actionExecution);
-            verify(mock.constructed().get(0), times(1)).recordLongRunningTask(anyString(), anyString());
+            verify(mock.constructed().getFirst(), times(1)).recordLongRunningTask(anyString(), anyString());
         }
     }
 
     @Test
     @SneakyThrows
     public void testRemoveLongRunningTask() {
-        ActionExecution actionExecution = new ActionExecution("TestClass", "testAction", "testDid", OffsetDateTime.now());
+        ActionExecution actionExecution = new ActionExecution("TestClass", "testAction", DID, OffsetDateTime.now());
         try (MockedConstruction<JedisKeyedBlockingQueue> mock = Mockito.mockConstruction(JedisKeyedBlockingQueue.class)) {
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             actionEventQueue.removeLongRunningTask(actionExecution);
-            verify(mock.constructed().get(0), times(1)).removeLongRunningTask(actionExecution.key());
+            verify(mock.constructed().getFirst(), times(1)).removeLongRunningTask(actionExecution.key());
         }
     }
 
@@ -286,9 +288,9 @@ public class ActionEventQueueTest {
     public void testGetLongRunningTasks() {
         try (MockedConstruction<JedisKeyedBlockingQueue> ignored = Mockito.mockConstruction(JedisKeyedBlockingQueue.class, (mockJedis, context)
                 -> when(mockJedis.getLongRunningTasks())
-                .thenReturn(Map.of("TestClass:testAction:testDid", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(5))),
-                        "TestClass:testAction:testDid2", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(1))),
-                        "TestClass:testAction:testDid3", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusHours(1))))))) {
+                .thenReturn(Map.of("TestClass:testAction:a3aeb57e-180f-4ea5-a997-2fd291e1d8e1", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(5))),
+                        "TestClass:testAction:a3aeb57e-180f-4ea5-a997-2fd291e1d8e2", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(1))),
+                        "TestClass:testAction:a3aeb57e-180f-4ea5-a997-2fd291e1d8e3", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusHours(1))))))) {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             List<ActionExecution> result = actionEventQueue.getLongRunningTasks();
@@ -301,12 +303,12 @@ public class ActionEventQueueTest {
     public void testRemoveExpiredLongRunningTasks() {
         try (MockedConstruction<JedisKeyedBlockingQueue> mock = Mockito.mockConstruction(JedisKeyedBlockingQueue.class, (mockJedis, context)
                 -> when(mockJedis.getLongRunningTasks())
-                .thenReturn(Map.of("TestClass:testAction:testDid", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(30), OffsetDateTime.now().minusMinutes(25))),
-                        "TestClass:testAction:testDid2", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(1))))))) {
+                .thenReturn(Map.of("TestClass:testAction:a3aeb57e-180f-4ea5-a997-2fd291e1d8e1", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(30), OffsetDateTime.now().minusMinutes(25))),
+                        "TestClass:testAction:a3aeb57e-180f-4ea5-a997-2fd291e1d8e2", OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(1))))))) {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
             actionEventQueue.removeExpiredLongRunningTasks();
-            verify(mock.constructed().get(0), times(1)).removeLongRunningTask("TestClass:testAction:testDid");
+            verify(mock.constructed().getFirst(), times(1)).removeLongRunningTask("TestClass:testAction:a3aeb57e-180f-4ea5-a997-2fd291e1d8e1");
         }
     }
 
@@ -314,11 +316,11 @@ public class ActionEventQueueTest {
     @SneakyThrows
     public void testLongRunningTaskExists() {
         try (MockedConstruction<JedisKeyedBlockingQueue> ignored = Mockito.mockConstruction(JedisKeyedBlockingQueue.class, (mockJedis, context)
-                -> when(mockJedis.getLongRunningTask("TestClass:testAction:testDid"))
+                -> when(mockJedis.getLongRunningTask("TestClass:testAction:" + DID))
                 .thenReturn(OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusSeconds(1)))))) {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
-            boolean exists = actionEventQueue.longRunningTaskExists("TestClass", "testAction", "testDid");
+            boolean exists = actionEventQueue.longRunningTaskExists("TestClass", "testAction", DID);
             assertTrue(exists);
         }
     }
@@ -327,11 +329,11 @@ public class ActionEventQueueTest {
     @SneakyThrows
     public void testLongRunningTaskExistsExpired() {
         try (MockedConstruction<JedisKeyedBlockingQueue> ignored = Mockito.mockConstruction(JedisKeyedBlockingQueue.class, (mockJedis, context)
-                -> when(mockJedis.getLongRunningTask("TestClass:testAction:testDid"))
+                -> when(mockJedis.getLongRunningTask("TestClass:testAction:" + DID))
                 .thenReturn(OBJECT_MAPPER.writeValueAsString(List.of(OffsetDateTime.now().minusMinutes(5), OffsetDateTime.now().minusHours(100)))))) {
 
             ActionEventQueue actionEventQueue = new ActionEventQueue(new ActionEventQueueProperties(), 2);
-            boolean exists = actionEventQueue.longRunningTaskExists("TestClass", "testAction", "testDid");
+            boolean exists = actionEventQueue.longRunningTaskExists("TestClass", "testAction", DID);
             assertFalse(exists);
         }
     }
